@@ -327,4 +327,7 @@ gint ui_get_gtk_settings_integer(const gchar *property_name, gint default_value)
 
 GdkPixbuf *ui_get_mime_icon(const gchar *mime_type, GtkIconSize size);
 
+void ui_focus_current_document(void);
+
+
 #endif
